src/test/fail/inheritance/inherit_noexist.lly
#[
SyntaxError: Class 'invalid' does not exist.
Where: File "inherit_noexist.lly" at line 6
]#

class abc() < invalid {  }
